centos7/docs/testing/test-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: local.bizconf.cn
    http:
      paths:
      - path: /test
        backend:
          serviceName: nginx
          servicePort: 80
